# SG-Gruppe-A

./: .gitignore  GEMINI.md  README.md  proposal.md
.claude/: settings.local.json
.gemini/: settings.json
.logging/: api-viewer.html  process-api-requests.py  server.py
backend/: .gitignore  README.md  main.py  pyproject.toml  test_endpoint.py
backend/app/: dependencies.py
backend/app/models/: ats.py  gap.py  generation.py  jd.py  job.py  result.py
backend/app/routers/: analysis.py  cv.py  generation.py  jobs.py
backend/app/services/: ats_scorer.py  cover_letter_generator.py  cv_parser.py  cv_service.py  gap_analyzer.py  jd_analyzer.py  job_service.py
backend/poc/: ai_test.py  generate_mock_cv.py  sample_cv.docx
backend/tests/: test_ai_poc.py  test_analysis_integration.py  test_ats_scorer.py  test_ats_suggestions.py  test_cv_parser.py  test_cv_service_integration.py  test_cv_upload.py  test_gap_analyzer.py  test_generation.py  test_jd_analyzer.py  test_job_service.py  test_jobs_router.py
backend/uploads/: 0e75ddb4-b09b-4652-a28f-ac703fc26c18_Jobb_CV_Norsk.docx  b9122877-1f8d-4a81-a2ae-92027c1c6300_CV_2025.docx
docs/: PRD.md  architecture.md  backlog.md  bmm-workflow-status.md  bmm-workflow-status.yaml  brainstorming user flows - 2025-10-29.md  brainstorming- layout Thursday, October 30, 2025.md  brainstorming- time for the LLM to give a feedback-Thursday, October 30, 2025.md  epics.md  final-app-showcase.html  implementation-readiness-report-2025-11-26.md  product-brief-ibe160-2025-11-04.md  project-plan.md  research-competitive-2025-10-30.md  (+12 more)
(+213 files in other folders)
